test fix projects overflow in mobile view

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -391,6 +391,10 @@ a:hover {
     font-size: 1em;
   }
 
+  #pro-responsive {
+    overflow: hidden;
+  }
+
   .modal-body p {
     font-size: .8em;
   }
